--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="College Logo" class="logo">
+        <img src="logo.png" alt="College Logo" class="logo">
         <h1>Welcome to My College Portal</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -35,3 +35,4 @@
 </body>
 
 </html>
+
