--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My College Portal</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
         <img src="logo.png" alt="College Logo" class="logo">
-        <h1>Welcome to My College Portal</h1>
-        <nav>
+        <h1 class="site-title">Welcome to My College Portal</h1>
+        <nav class="main-nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="#">Courses</a>
@@ -20,11 +18,57 @@
         </nav>
     </header>
 
+    <section class="hero-banner">
+        <img src="banner.jpg" alt="Campus View Banner" class="hero-img">
+        <div class="hero-text">
+            <h2 class="fade-in">Education • Growth • Community</h2>
+            <p class="slide-up">Empowering you for a brighter tomorrow.</p>
+        </div>
+    </section>
+
+    <section class="ticker-wrap">
+        <div class="ticker">
+            <span class="ticker-item">Admission 2025 now open! Apply today.</span>
+            <span class="ticker-item">Campus Fest on 10 Oct – Register by 1 Oct.</span>
+            <span class="ticker-item">New courses added for Data Science and AI.</span>
+        </div>
+    </section>
+
     <main>
-        <h2>Student Dashboard</h2>
-        <p>Access your courses, timetable, and announcements here.</p>
-        <button id="showNotice">Show Latest Notice</button>
-        <p id="notice"></p>
+        <section class="news-section">
+            <h2>Campus News & Notifications</h2>
+            <div class="news-cards">
+                <div class="card">
+                    <img src="news1.jpg" alt="Admission Notification">
+                    <div class="card-content">
+                        <h3>Admission Registration Open</h3>
+                        <p>Applications are now being accepted for all undergraduate courses for 2025.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="news2.jpg" alt="Campus Fest">
+                    <div class="card-content">
+                        <h3>Campus Fest on 10 October</h3>
+                        <p>Music, sports, and culture — Join us for a day of fun and community.</p>
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="news3.jpg" alt="New Course Alert">
+                    <div class="card-content">
+                        <h3>New Courses in AI & Data Science</h3>
+                        <p>Exciting new courses announced for the upcoming semester.</p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="notice-section">
+            <button id="showNotice">Show Latest Notice</button>
+            <p id="notice"></p>
+        </section>
     </main>
 
     <footer>
@@ -33,7 +77,6 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
 
 
